# AlphScore

./: README.md  Snakefile
analysis/: .Rhistory  Snakefile  available_colnames.tsv  prediction.R  preprocess_first_prediction.sh  variables_used.tsv
config/: config.yaml  dbnsfp_files.txt  pdb_ids.txt
environment/: alphafold_environment.yaml  alphafold_environment_from_history.yaml  alphafold_exact_environment_from_cluster_for_documentation.yaml
extract_features/: Snakefile
extract_features/tools/feature/feature-3.1.0/tools/lib/oldfeature/: COPYING  PDB.py  configure.in  convertfeatures.py  crossvalidate.py  evaluateCrossValidation.py  feature.ini  featureexts.py  featurescriptparams.py  fetchdssp.py  fetchproteinfile.py  findCalciums.py  format_utils.py  fsutil.py  gnumake  leaveoneout.py  normal_cdf.c  params.ini  prosite.py  sitedata_format.py  sitefile.py  sitefile_format.py  sitescore.py  threemotifdbh.py
resources/: .~lock.Source.xlsx#  .~lock.available_colnames_W_surr.xlsx#  .~lock.available_colnames_nopLDDT.xlsx#  .~lock.grid_search.ods#  .~lock.grid_search.tsv#  .~lock.mapping_genename_uniprot.tsv#  available_colnames_NullModel.xlsx  available_colnames_W_surr.xlsx  available_colnames_nopLDDT.xlsx  (+5 more)
tools/feature/feature-3.1.0/tools/lib/oldfeature/: INSTALL  Makefile.am  Makefile.mystat  Motif.py  README  callable.py  evaluateMotif.py  evaluate_model.py  fetchpdb.py  hitfile.py  hitfile_format.py  mannwhitney.py  mystatmodule.c  nngrid.py  normal_cdf.h  proteindatabankdbh.py  retrain.py  scan_model.py  sitedata.py  threemotifrecord.py  train_model.py
(+199 files in other folders)
